--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-    <title>Document</title>
+    <title>Golden Soft</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
 
